--- a/juso/רזים ואופקים/Shakes.html
+++ b/juso/רזים ואופקים/Shakes.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <title>JUSO - שייקים</title>
     <link rel="icon" type="image/png" href="images/ICON2.png" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta name="author" content="רז שלם ואופק בקוש" />
+    <meta name="description" content="All available shakes" />
+    <meta name="author" content="Razim & Ofekim" />
+    <meta name="keywords" content="GreenShake,MilkShake,Juice,AlmondShake,Drink,cold,Coffee" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
     <!-- CSS -->
@@ -23,9 +23,7 @@
 <body>
     <div id="container">
         <header>
-            <meta name="description" content="All available shakes" />
-            <meta name="author" content="Razim & Ofekim" />
-            <meta name="keywords" content="GreenShake,MilkShake,Juice,AlmondShake,Drink,cold,Coffee" />
+
             <nav aria-label="main-nav">
                 <ul class="ulnav">
                     <a href="Index.html">
@@ -78,11 +76,11 @@
         <section class="InfoHerf">
             <table>
                 <tr>
-                    <td><a href="ShakeInfos/ShakeInfo1.html">קפה לאטה</a></td>
-                    <td><a href="ShakeInfos/ShakeInfo2.html">מאצ'ה</a></td>
-                    <td><a href="ShakeInfos/ShakeInfo3.html">תפוזים</a></td>
-                    <td><a href="ShakeInfos/ShakeInfo4.html">חלב שקדים</a></td>
-                    <td><a href="ShakeInfos/ShakeInfo5.html">תות בננה</a></td>
+                    <td><a href="ShakeInfo.html">קפה לאטה</a></td>
+                    <td><a href="ShakeInfo.html">מאצ'ה</a></td>
+                    <td><a href="ShakeInfo.html">תפוזים</a></td>
+                    <td><a href="ShakeInfo.html">חלב שקדים</a></td>
+                    <td><a href="ShakeInfo.html">תות בננה</a></td>
                 </tr>
                 <tr>
                     <td>28 ש"ח</td>
@@ -103,11 +101,11 @@
         <section class="InfoHerf">
             <table>
                 <tr>
-                    <td><a href="ShakeInfos/ShakeInfo1.html">פטל</a></td>
-                    <td><a href="ShakeInfos/ShakeInfo2.html">שיבולת שועל</a></td>
-                    <td><a href="ShakeInfos/ShakeInfo3.html">תפוזים</a></td>
-                    <td><a href="ShakeInfos/ShakeInfo4.html">תרד ומלפפון</a></td>
-                    <td><a href="ShakeInfos/ShakeInfo5.html">קפוצ'ינו</a></td>
+                    <td><a href="ShakeInfo.html">פטל</a></td>
+                    <td><a href="ShakeInfo.html">שיבולת שועל</a></td>
+                    <td><a href="ShakeInfo.html">תפוזים</a></td>
+                    <td><a href="ShakeInfo.html">תרד ומלפפון</a></td>
+                    <td><a href="ShakeInfo.html">קפוצ'ינו</a></td>
                 </tr>
                 <tr>
                     <td>28 ש"ח</td>
