--- a/juso/רזים ואופקים/about.html
+++ b/juso/רזים ואופקים/about.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <title>JUSO - אודות</title>
     <link rel="icon" type="image/png" href="images/ICON2.png" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta name="author" content="רז שלם ואופק בקוש" />
+    <meta name="description" content="information about us" />
+    <meta name="author" content="Razim & Ofekim" />
+    <meta name="keywords" content="Info,AboutUs" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
     <!-- CSS -->
@@ -25,12 +25,9 @@
 <body>
     <div id="container">
         <header>
-            <meta name="description" content="information about us" />
-            <meta name="author" content="Razim & Ofekim" />
-            <meta name="keywords" content="Info,AboutUs" />
             <nav aria-label="main-nav">
                 <ul class="ulnav">
-                    <a href="HomePage.html">
+                    <a href="Index.html">
                     <li class="li1 logo">JUSO</li></a>
                     <a href="Shakes.html">
                     <li class="li1 liPT">
@@ -67,7 +64,7 @@
             <img src="images/AboutUs.png" alt=""/>
         </div>
         <ul class="breadcrumb">
-            <li><a href="HomePage.html">דף הבית ></a></li>
+            <li><a href="Index.html">דף הבית ></a></li>
             <li>אודות</li>
         </ul>
         <h2>קצת על האתר שלנו</h2>
