--- a/juso/רזים ואופקים/contactUs.html
+++ b/juso/רזים ואופקים/contactUs.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <title>JUSO - צור קשר </title>
     <link rel="icon" type="image/png" href="images/ICON2.png" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta name="author" content="רז שלם ואופק בקוש" />
+    <meta name="description" content="ask us anything, and let us know if you're having any trouble" />
+    <meta name="author" content="Razim & Ofekim" />
+    <meta name="keywords" content="FullName,Gender,Form,Complain,Questions" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
     <!-- CSS -->
@@ -25,9 +25,6 @@
 <body>
     <div id="container">
         <header>
-            <meta name="description" content="ask us anything, and let us know if you're having any trouble" />
-            <meta name="author" content="Razim & Ofekim" />
-            <meta name="keywords" content="FullName,Gender,Form,Complain,Questions" />
             <nav aria-label="main-nav">
                 <ul class="ulnav">
                     <a href="Index.html">
@@ -88,8 +85,8 @@
             <label for="Notification">
                 <fieldset class="FormPage">
                     <legend class="FormPage">סמנו את שיטת התקשורת העדיפה עליכם:</legend>
-                    <input type="radio" id="Notification" name="first" /> טלפון
-                    <input type="radio" id="Notification" name="first" /> כתובת אימייל
+                    <input type="radio" id="Notification" name="first" checked /> טלפון
+                    <input type="radio" name="first" /> כתובת אימייל
                 </fieldset>
             </label>
             <label for="textArea">
