--- a/juso/רזים ואופקים/Index.html
+++ b/juso/רזים ואופקים/Index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <title>JUSO - דף בית</title>
     <link rel="icon" type="image/png" href="images/ICON2.png" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta name="author" content="רז שלם ואופק בקוש" />
+    <meta name="description" content="Front home page for shakes" />
+    <meta name="author" content="Razim & Ofekim" />
+    <meta name="keywords" content="GreenShake,Juice,AlmondShake,Drink,Coffee,ShakeInfo" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
     <!-- CSS -->
@@ -24,9 +24,6 @@
 <body>
     <div id="container">
         <header>
-            <meta name="description" content="Front home page for shakes" />
-            <meta name="author" content="Razim & Ofekim" />
-            <meta name="keywords" content="GreenShake,Juice,AlmondShake,Drink,Coffee,ShakeInfo" />
             <nav aria-label="main-nav">
                 <ul class="ulnav">
                     <a href="Index.html">
@@ -48,7 +45,7 @@
                             <li>מה זה קולד פרס</li>
                         </ul>
                     </li>
-                    <a href="AboutUs.html">
+                    <a href="about.html">
                     <li class="li1 liPT">
                         הכירו אותנו
                         <ul>
@@ -56,7 +53,7 @@
                             <li>שאלות נפוצות</li>
                         </ul>
                     </li></a>
-                    <a href="Contact.html">
+                    <a href="contactUs.html">
                     <li class="li1 liPT"> צור קשר</li></a>
                 </ul>
             </nav>
@@ -98,8 +95,8 @@
                 <tr>
                     <th><a href="Shakes.html"> שייקים</a></th>
                     <th> תוכניות ניקוי </th>
-                    <th><a href="AboutUs.html"> הכירו אותנו</a></th>
-                    <th><a href="Contact.html"> צור קשר </a></th>
+                    <th><a href="about.html"> הכירו אותנו</a></th>
+                    <th><a href="contactUs.html"> צור קשר </a></th>
                 </tr>
                 <tr>
 
