--- a/juso/רזים ואופקים/ShakeInfo.html
+++ b/juso/רזים ואופקים/ShakeInfo.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body>
+<body onload="currentSlide(1)">
     <div id="container">
         <header>
             <nav aria-label="main-nav">
@@ -109,6 +109,65 @@
                 <div>נשים בהריון</div>
                 <div>בעלי בעיות לב</div>
             </section>
+
+        </section>
+        <section class="Gallery">
+            <h2>מוצרים נוספים</h2>
+            <div class="mySlides">
+                <div class="numbertext">6 / 1</div>
+                <img src="images/WaterBottle.jpeg" style="width:70%"/>
+            </div>
+            <div class="mySlides">
+                <div class="numbertext">6 / 2</div>
+                <img src="images/Straw.jpeg" style="width:70%" />
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">6 / 3</div>
+                <img src="images/Cooler.jpeg" style="width:70%"/>
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">6 / 4</div>
+                <img src="images/Hat.jpeg" style="width:70%" />
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">6 / 5</div>
+                <img src="images/Bag.jpeg" style="width:70%" />
+            </div>
+            <div class="mySlides">
+                <div class="numbertext">6 / 6</div>
+                <img src="images/JuiceBottle.jpeg" style="width:70%" />
+            </div>
+
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+            <div class="caption-container">
+                <p id="caption"></p>
+            </div>
+
+            <div class="row">
+                <div class="column">
+                    <img class="demo cursor" src="images/WaterBottle.jpeg" style="width:100%" onclick="currentSlide(1)" alt="Water Bottle">
+                </div>
+                <div class="column">
+                    <img class="demo cursor" src="images/Straw.jpeg" style="width:100%" onclick="currentSlide(2)" alt="Straws">
+                </div>
+                <div class="column">
+                    <img class="demo cursor" src="images/Cooler.jpeg" style="width:100%" onclick="currentSlide(3)" alt="Cooler">
+                </div>
+                <div class="column">
+                    <img class="demo cursor" src="images/Hat.jpeg" style="width:100%" onclick="currentSlide(4)" alt="Cool Hat">
+                </div>
+                <div class="column">
+                    <img class="demo cursor" src="images/Bag.jpeg" style="width:100%" onclick="currentSlide(5)" alt="Juice Bottle">
+                </div>
+                <div class="column">
+                    <img class="demo cursor" src="images/JuiceBottle.jpeg" style="width:100%" onclick="currentSlide(6)" alt="Juice Bottle">
+                </div>
+            </div>
 
         </section>
         <footer>
